Hide search bar on small mobile breakpoints to prevent ABOUT button pushing over (temporary solution)

--- a/src/components/NavBars/TitleBar/TitleBar.module.css
+++ b/src/components/NavBars/TitleBar/TitleBar.module.css
@@ -231,3 +231,9 @@ header {
 		margin-top: 4px;
 	}
 }
+
+@media only screen and (max-width: 370px) {
+	.Search {
+		display: none;
+	}
+}
